--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,25 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>org.carecode.mw.lims.mw.indiko.Indiko</exec.mainClass>
     </properties>
-
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>${exec.mainClass}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
+    
     <name>IndikoPlus</name>
 </project>
